jssynth.css
body {
  margin: 0;
  padding: 0;
  font-family: "Helvetica Neue", arial, sans-serif;
  font-size: 20px;
  background: #ebebeb;
  color: #130f30;
  line-height: 1.5em;
  font-weight: 300;
}

#container {
  margin: 1.5rem auto;
  border: 1.25rem solid #130f30;
  padding: 3.0rem;
  width: 1024px;
  max-width: 100%;
  overflow: auto;
  box-sizing: border-box;
  background: #fff;
  border-radius: 3.0rem;
}

.logo {
  font-size: 6.0rem;
  line-height: 6.0rem;
  font-weight: bold;
  color: #c00;
}

.tagline {
  color: #aaa;
  display: block;
}

.section-header {
  font-size: 1.5rem;
  line-height: 1.5rem;
  margin-top: 4.5rem;
}

.sub-section-header {
  display: block;
  color: #aaa;
  margin-top: 1.5rem;
}

label {
  width: 30%;
  display: inline-block;
  box-sizing: border-box;
}

label.radioLabel {
  width: auto;
  margin-right: 0.75em;
}

.indented {
  padding-left: 1.0rem;
}

.underlinedInput {
  outline: none;
  border: solid black;
  border-width: 0 0 1px 0;
  border-radius: 0;  /* For iOS */
  width: 20%;
}

input[type='text'].ng-invalid.ng-dirty {
  background: #f66;
}

input[type='text'] {
  font-family: "Helvetica Neue", arial, sans-serif;
  font-size: 1.20rem;
  font-weight: normal;
}

input[type='radio'] {
  width: auto;
  -webkit-appearance: none;
  border-radius: 10px;
  width: 1.0rem;
  height: 1.0rem;
  outline: none;
  border: 2px solid #130f30;
  box-sizing: border-box;
  vertical-align: text-top;
}

input[type='radio']:unchecked { }

input[type='radio']:checked {
  background-color: #130f30;
}

input[type='range'] {
  background-color: #ccc;
  -webkit-appearance: none;
  height: 1.5em;
  margin: 0;
  padding: 0;
  outline: none;
  border-radius: 10px;
}

input[type='range']::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 1.5em;
  background: #130f30;
  width: 3.0em;
  border-radius: 10px;
}

input[type='range']::-webkit-slider-thumb:hover {
  background: #c00;
}

input[type='range']::-webkit-slider-thumb:active {
  background: #f24;
}

input[type=range]::-moz-focus-outer {
  border: 0;
}

input[type='range']::-moz-range-thumb {
  height: 1.5em;
  background: #130f30;
  width: 3.0em;
  border: 0;
  border-radius: 10px;
}

input[type='range']::-moz-range-thumb:hover {
  background: #c00;
}

input[type='range']::-moz-range-thumb:active {
  background: #f24;
}

input[type='range']::-moz-range-track {
  display: none;
  background: #ccc;
  border: 0;
  outline: none;
}

input {
  width: 56%;
}

.helperToggleContainer {
  font-size: 1.0rem;
  font-weight: normal;
}

.helperToggle {
  color: #0af;
  cursor: pointer;
}

.note-container {
  width: 6.25%;
  min-width: 3.0rem;
  box-sizing: border-box;
  padding-left: 2px;
  padding-right: 2px;
}

.note-column-header {
  font-size: 1.0rem;
  color: #ccc;
  display: inline-block;
  width: 100%;
}

input.note {
  width: 100%;
  text-align: center;
  box-sizing: border-box;
  outline: none;
  border: 0;
  border-bottom: 1px solid #000;
  border-radius: 0;  /* For iOS */
  margin: 0;
  font-size: 1.0rem;
  line-height: 2.0rem;
}

input.note:focus {
  background: #f3f3f3;
}

button {
  background: #ccc;
  border: 0;
  outline: none;
  font-size: 1.5rem;
  padding: 0.75rem;
  font-family: "Helvetica Neue", arial, sans-serif;
  font-weight: bold;
  border-radius: 10px;
  color: #130f30;
  cursor: pointer;
}

.button-small {
  font-size: 1.0rem;
  padding: 0.0rem;
}

.button-full {
  width: 10.0rem;
}

.button-mute-track {
  box-sizing: border-box;
  width: 8%;
}

.button-delete-track {
  box-sizing: border-box;
  width: 5%;
}

.track-notes {
  box-sizing: border-box;
  width: 87%;
}

.list-style-none {
  list-style-type: none;
}

.mt0 { margin-top: 0; }
.mb0 { margin-bottom: 0; }
.ml0 { margin-left: 0; }
.mt1 { margin-top: 1.5rem; }
.mb1 { margin-bottom: 1.5rem; }
.ml1 { margin-left: 1.5rem; }
.mt2 { margin-top: 3.0rem; }
.mb2 { margin-bottom: 3.0rem; }

.pl0 { padding-left: 0.0rem; }

.center { text-align: center; }
.right  { float: right; }

.underline { text-decoration: underline; }

.block { display: block; }
.inline-block { display: inline-block; }
.display-none { display: none; }

.overflow-hidden-x { overflow-x: hidden; }
.overflow-scroll-x { overflow-x: scroll; }

.full-width { width: 100%; }

.enabled {
  background: orange;
  color: #fff;
}

@media (max-width: 1024px) {
  body {
    background: #fff;
  }

  #container {
    border: 0;
    border-radius: 0;
  }
}

@media (max-width: 768px) {
  body {
    margin: 1.5rem;
  }

  #container {
    border: 0;
    border-radius: 0;
    padding: 0;
  }

  label {
    width: 35%;
  }

  input {
    width: 45%;
  }

  .waveform {
    float: left;
  }

  .waveformOptionsContainer {
    width: 65%;
    display: inline-block;
  }

  .radioContainer {
    width: 50%;
    display: inline-block;
    margin: 0;
    padding: 0;
  }

  .button-mute-track {
    width: 13%;
  }

  .button-delete-track {
    width: 8%;
  }

  .track-notes {
    width: 79%;
  }
}

@media (max-width: 480px) {
  body {
    margin: 1.0rem;
  }

  .logo {
    font-size: 4.5rem;
    line-height: 4.5rem;
  }

  label {
    width: 100%;
  }

  .indented {
    padding-left: 0;
  }

  input {
    width: 73%;
  }

  .waveform {
    float: none;
  }

  .waveformOptionsContainer {
    width: 100%;
    display: block;
  }

  button {
    width: 100%;
  }

  .button-mute-track {
    width: 15%;
  }

  .button-delete-track {
    width: 8%;
  }

  .track-notes {
    width: 77%;
  }
}

